Fix Bitwarden icon in dark mode

--- a/src/UI/styles/autofill-tooltip-styles.css
+++ b/src/UI/styles/autofill-tooltip-styles.css
@@ -152,8 +152,8 @@
     filter: invert(100%);
 }
 @media (prefers-color-scheme: dark) {
-    .tooltip__button--data::before,
-    .tooltip__button--data::before {
+    .tooltip__button--data:not(.tooltip__button--data--bitwarden)::before,
+    .tooltip__button--data:not(.tooltip__button--data--bitwarden)::before {
         filter: invert(100%);
         opacity: .9;
     }
